@@ -479,6 +479,15 @@ void SCIPsortRealInt(
    int                   len                 /**< length of arrays */
    );
 
+/** sort of three joint arrays of Reals/ints/Longs, sorted by first array in non-decreasing order */
+extern
+void SCIPsortRealIntLong(
+   SCIP_Real*            realarray,          /**< SCIP_Real array to be sorted */
+   int*                  intarray,           /**< int array to be permuted in the same way */
+   SCIP_Longint*         longarray,          /**< SCIP_Longint array to be permuted in the same way */
+   int                   len                 /**< length of arrays */
+   );
+
 /** sort of three joint arrays of Reals/ints/Pointer, sorted by first array in non-decreasing order */
 extern
 void SCIPsortRealIntPtr(
@@ -497,7 +506,7 @@ void SCIPsortRealRealPtr(
    int                   len                 /**< length of arrays */
    );
 
-/** sort of four joint arrays of Reals/Long/Reals/ints, sorted by first array in non-decreasing order */
+/** sort of four joint arrays of Reals/Longs/Reals/ints, sorted by first array in non-decreasing order */
 extern
 void SCIPsortRealLongRealInt(
    SCIP_Real*            realarray1,         /**< SCIP_Real array to be sorted */
@@ -852,6 +861,15 @@ void SCIPsortDownRealInt(
    int                   len                 /**< length of arrays */
    );
 
+/** sort of three joint arrays of Reals/ints/Longs, sorted by first array in non-increasing order */
+extern
+void SCIPsortDownRealIntLong(
+   SCIP_Real*            realarray,          /**< SCIP_Real array to be sorted */
+   int*                  intarray,           /**< int array to be permuted in the same way */
+   SCIP_Longint*         longarray,          /**< SCIP_Longint array to be permuted in the same way */
+   int                   len                 /**< length of arrays */
+   );
+
 /** sort of three joint arrays of Reals/ints/Pointer, sorted by first array in non-increasing order */
 extern
 void SCIPsortDownRealIntPtr(
@@ -870,7 +888,7 @@ void SCIPsortDownRealRealPtr(
    int                   len                 /**< length of arrays */
    );
 
-/** sort of four joint arrays of Reals/Long/Reals/ints, sorted by first array in non-increasing order */
+/** sort of four joint arrays of Reals/Longs/Reals/ints, sorted by first array in non-increasing order */
 extern
 void SCIPsortDownRealLongRealInt(
    SCIP_Real*            realarray1,         /**< SCIP_Real array to be sorted */
@@ -1273,6 +1291,18 @@ void SCIPsortedvecInsertRealInt(
    int*                  intarray,           /**< int array where an element is to be inserted */
    SCIP_Real             keyval,             /**< key value of new element */
    int                   field1val,          /**< additional value of new element */
+   int*                  len                 /**< pointer to length of arrays (will be increased by 1) */
+   );
+
+/** insert a new element into three joint arrays of Reals/ints/Longs, sorted by first array in non-decreasing order */
+extern
+void SCIPsortedvecInsertRealIntLong(
+   SCIP_Real*            realarray,          /**< SCIP_Real array to be sorted */
+   int*                  intarray,           /**< int array to be permuted in the same way */
+   SCIP_Longint*         longarray,          /**< SCIP_Longint array to be permuted in the same way */
+   SCIP_Real             keyval,             /**< key value of new element */
+   int                   field1val,          /**< additional value of new element */
+   SCIP_Longint          field2val,          /**< additional value of new element */
    int*                  len                 /**< pointer to length of arrays (will be increased by 1) */
    );
 
@@ -1757,7 +1787,6 @@ void SCIPsortedvecInsertDownRealPtrPtr(
    int*                  len                 /**< pointer to length of arrays (will be increased by 1) */
    );
 
-
 /** insert a new element into two joint arrays of Reals/ints, sorted by first array in non-increasing order */
 extern
 void SCIPsortedvecInsertDownRealInt(
@@ -1765,6 +1794,18 @@ void SCIPsortedvecInsertDownRealInt(
    int*                  intarray,           /**< int array where an element is to be inserted */
    SCIP_Real             keyval,             /**< key value of new element */
    int                   field1val,          /**< additional value of new element */
+   int*                  len                 /**< pointer to length of arrays (will be increased by 1) */
+   );
+
+/** insert a new element into three joint arrays of Reals/ints/Longs, sorted by first array in non-increasing order */
+extern
+void SCIPsortedvecInsertDownRealIntLong(
+   SCIP_Real*            realarray,          /**< SCIP_Real array to be sorted */
+   int*                  intarray,           /**< int array to be permuted in the same way */
+   SCIP_Longint*         longarray,          /**< SCIP_Longint array to be permuted in the same way */
+   SCIP_Real             keyval,             /**< key value of new element */
+   int                   field1val,          /**< additional value of new element */
+   SCIP_Longint          field2val,          /**< additional value of new element */
    int*                  len                 /**< pointer to length of arrays (will be increased by 1) */
    );
 
@@ -1792,7 +1833,7 @@ void SCIPsortedvecInsertDownRealRealPtr(
    int*                  len                 /**< pointer to length of arrays (will be increased by 1) */
    );
 
-/** insert a new element into four joint arrays of Reals/Long/Reals/ints, sorted by first array in non-increasing order */
+/** insert a new element into four joint arrays of Reals/Longs/Reals/ints, sorted by first array in non-increasing order */
 extern
 void SCIPsortedvecInsertDownRealLongRealInt(
    SCIP_Real*            realarray1,         /**< SCIP_Real array where an element is to be inserted */
@@ -2212,6 +2253,16 @@ void SCIPsortedvecDelPosRealInt(
    int*                  len                 /**< pointer to length of arrays (will be decreased by 1) */
    );
 
+/** delete the element at the given position from three joint arrays of Reals/ints/Longs, sorted by first array in non-decreasing order */
+extern
+void SCIPsortedvecDelPosRealIntLong(
+   SCIP_Real*            realarray,          /**< SCIP_Real array where an element is to be deleted */
+   int*                  intarray,           /**< int array where an element is to be deleted */
+   SCIP_Longint*         longarray,          /**< SCIP_Longint array where an element is to be deleted */
+   int                   pos,                /**< array position of element to be deleted */
+   int*                  len                 /**< pointer to length of arrays (will be decreased by 1) */
+   );
+
 /** delete the element at the given position from three joint arrays of Reals/ints/Pointer, sorted by first array in non-decreasing order */
 extern
 void SCIPsortedvecDelPosRealIntPtr(
@@ -2624,6 +2675,16 @@ extern
 void SCIPsortedvecDelPosDownRealInt(
    SCIP_Real*            realarray,          /**< SCIP_Real array where an element is to be deleted */
    int*                  intarray,           /**< pointer array where an element is to be deleted */
+   int                   pos,                /**< array position of element to be deleted */
+   int*                  len                 /**< pointer to length of arrays (will be decreased by 1) */
+   );
+
+/** delete the element at the given position from three joint arrays of Reals/ints/Longs, sorted by first array in non-increasing order */
+extern
+void SCIPsortedvecDelPosDownRealIntLong(
+   SCIP_Real*            realarray,          /**< SCIP_Real array where an element is to be deleted */
+   int*                  intarray,           /**< int array where an element is to be deleted */
+   SCIP_Longint*         longarray,          /**< SCIP_Longint array where an element is to be deleted */
    int                   pos,                /**< array position of element to be deleted */
    int*                  len                 /**< pointer to length of arrays (will be decreased by 1) */
    );
